Re-wrote 1 John 2:28-3:10

--- a/_posts/bible-studies-Viet/John-Epistles/2022-09-15-1John-ch2-v28-ch3-v10-Viet.md
+++ b/_posts/bible-studies-Viet/John-Epistles/2022-09-15-1John-ch2-v28-ch3-v10-Viet.md
@@ -22,89 +22,68 @@ comments_locked: false
 
 <div>
 <p>
-<img alt src="{{ site.url }}/assets/images/1-Giang-teaser.jpg" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
-Bài học này cũng không dễ gì hơn bài học tuần trước theo 1 Giăng 2:7-27. Tôi đã phải dựa vào nhiều chân lý nền tảng hơn nữa đề làm điểm tựa hầu có thể phân tích những điều sứ đồ Giăng đã viết trong đoạn Kinh thánh hôm nay.
+<img alt src="http://vacsf.org/assets/images/1-Giang-teaser.jpg" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
+Bài học này cũng không dễ gì hơn bài học tuần trước theo 1 Giăng 2:7-27. Tôi đã phải dựa vào nhiều chân lý nền tảng hơn nữa đề làm điểm tựa hầu có thể phân tích những điều sứ đồ Giăng đã viết trong đoạn Kinh thánh hôm nay. Đối với Giăng, <i><strong>"ở trong Chúa"</strong></i> nghĩa là gì? Là tiếp tục làm một điều gì đó? Giăng có nói đến <i><strong>"làm theo sự công bình"</strong></i>, thì chắc phải liên hệ đến một việc làm nào đó. Ông cũng nói đến sự <i><strong>"tự mình làm nên thanh sạch"</strong></i> làm nẩy lên trong trí tôi một nỗi nghi ngờ. Tôi công nhận là ai nấy đều nên tránh làm những điều có thể đem đến hậu quả tai hại, nhưng tôi không biết có điều gì chúng ta có thể làm khiến mình thanh sạch ngoại trừ dòng huyết Chúa Giê-su. Rồi Giăng lại quả quyết rằng <i><strong>"ai ở trong Ngài thì không phạm tội"</strong></i>. Giáo lý này không tìm được trong một đoạn Kinh thánh nào khác. Chúng ta hãy cùng nhau nghiên cứu.
 </p>
 </div>
 
-## HÃY Ở TRONG CHÚA
+
+## VIỆC LÀM và SỰ CÔNG BÌNH
 
 <span style="color: rgb(159, 29, 33);">
 *“<sup>28</sup>Vậy bây giờ, hỡi các con cái bé mọn ta, <strong>hãy ở trong Ngài</strong>, hầu cho, nếu Ngài hiện đến, chúng ta cũng đầy sự vững lòng, không <strong>bị hổ thẹn và quăng xa khỏi Ngài trong kỳ Ngài ngự đến</strong>. <sup>29</sup>Ví bằng các con biết Ngài là công bình, thì hãy biết rằng <strong>người nào làm theo sự công bình, ấy là kẻ bởi Ngài mà sanh ra.</strong>”*
 </span>
 (1 John 2:28-29) 
 
-***Hãy ở trong Ngài***<br />
+***Hãy ở trong Ngài***
+
 Từ khi tin Chúa cách đây hơn 30 năm, tôi đã thường có một giả định là *"ở trong Chúa"* nghĩa là làm những điều người tin Chúa hay làm, chẳng hạn như tham dự những buổi nhóm cầu nguyện, học Kinh thánh, đi nhà thờ, tham dự những buổi nhóm truyền giảng, dâng hiến, vân vân.
 
 Kết quả là nếu tôi không làm được những điều để được *"ở trong Chúa,"* tôi sẽ bị *"hổ thẹn và quăng xa khỏi Ngài,"* nghĩa là tôi sẽ nghe Chúa phán với mình rằng *"ta chẳng biết các ngươi bao giờ, hãy lui ra khỏi ta!"*  (Matthew 7:23) 
 
-Tôi chẳng còn tin vào điều đó nữa. Nếu bạn vẫn còn giữ những suy tưởng như vậy, chúc bạn may mắn, vì dù bạn có cố gắng đến đâu chăng nữa, những nỗ lực đó cũng chỉ là *"tấm áo nhớp"* (Isaiah 64:6) sẽ không giúp bạn được ở trong Chúa đâu. Sự thực là chỉ có đức tin của bạn nơi sự chết của Chúa trên cây thập tự là điều duy nhất cho phép bạn ở trong Ngài. Mọi sự khác chỉ là *"rơm rác."* (Philippians 3:8) Tôi cũng hy vọng rằng đây là điều Giăng muốn truyền đạt cho chúng ta, nhưng tôi thấy khó tin lắm.
+Điều này có nghĩa là sự cứu rỗi của tôi tùy thuộc vào sự tôi làm điều lành và tránh điều ác. Điều Giăng viết trong câu trên đi ngược lại với chân lý nền tảng mà tôi biết về sự cứu rỗi, là điều tôi chỉ có được nhờ đức tin nơi Đấng Christ là Đấng đã chịu chết cho tôi trên thập giá.
 
-***Làm theo sự công bình***<br />
-Mặc dầu sự thật là con cái Đức Chúa Trời phải phản ảnh bản tính của Ngài, như *"cây lành thì sinh quả lành"* (Matthew 7:17), nhưng các việc công bình của một người không phải là bằng chứng chắc chắn họ là con cái Đức Chúa Trời.
+***Làm theo sự công bình***
 
-> <span style="color: rgb(0, 61, 152);"><sup>22</sup>Ngày đó, sẽ có nhiều người thưa cùng ta rằng: Lạy Chúa, lạy Chúa, chúng tôi chẳng từng nhơn danh Chúa mà nói tiên tri sao? nhơn danh Chúa mà trừ quỉ sao? và lại nhơn danh Chúa mà làm nhiều phép lạ sao? <sup>23</sup>Khi ấy, ta sẽ phán rõ ràng cùng họ rằng: Hỡi kẻ làm gian ác, ta chẳng biết các ngươi bao giờ, hãy lui ra khỏi ta!" (Matthew 7:22-23)</span>
+Phi-líp 3:9 nói về hai thứ công bình:
 
-1 Corinthians 13:2-3 cũng nói đến những người làm được những công việc vĩ đại trong danh Chúa nhưng không có tình yêu thương, nghĩa là không có Chúa:
+> ... <sup>9</sup>và được ở trong Ngài, được <strong>sự công bình, không phải của tôi</strong> bởi luật pháp mà đến, bèn là bởi tin đến Ðấng Christ mà được, tức là <strong>công bình đến bởi Ðức Chúa Trời</strong> và đã lập lên trên đức tin (Philippians 3:9).
 
-> <span style="color: rgb(0, 61, 152);"><sup>2</sup>Dầu tôi được ơn nói tiên tri, cùng biết đủ các sự mầu nhiệm, và mọi sự hay biết; dầu tôi có cả đức tin đến nỗi dời núi được, nhưng không có tình yêu thương, thì tôi chẳng ra gì. <sup>3</sup>Dầu tôi phân phát gia tài để nuôi kẻ nghèo khó, lại bỏ thân mình để chịu đốt, song không có tình yêu thương, thì điều đó chẳng ích chi cho tôi. (1 Cor 13:2-3)</span>
+Vì sự công bình đến bởi Đức Chúa Trời chỉ có thể nhận lãnh được như một món quà qua sự chết của Con Ngài, nên sự công bình mà Giăng có thể làm theo phải là công bình của riêng ông. Cho dù Giăng có <i><strong>"làm theo sự công bình"</strong></i> đến đâu chăng nữa, chẳng điều gì ông làm có thể đem lại sự công bình của Đức Chúa Trời hầu ông được trở nên con cái của Ngài.
 
-Do đó, lời tuyên bố của Giăng là *"người nào làm theo sự công bình, ấy là kẻ bởi Ngài mà sanh ra"* không phải là một chân lý nền tảng, ít nhất là dựa theo những đoạn Kinh thánh liệt ra ở trên.
+Sự công bình của Giăng được đặt nền tảng trên việc làm, còn sự công bình của Đức Chúa Trời thì đặt nền tảng trên thập giá của Đấng Christ. Bạn hãy cẩn thận sự công bình mình tìm kiếm đến từ đâu.
+
+> Anh em thảy đều muốn cậy luật pháp cho được xưng công bình, thì đã <strong>lìa khỏi Ðấng Christ, mất ân điển rồi</strong> (Galatians 5:4).
 
 ## TỰ MÌNH LÀM NÊN THANH SẠCH
 
-<span style="color: rgb(159, 29, 33);"> *“<sup>3</sup>Ai có sự trông cậy đó trong lòng, thì tự mình làm nên thanh sạch, cũng như Ngài là thanh sạch.”* </span> (1 John 3:3) 
+<span style="color: rgb(159, 29, 33);"> *“<sup>3</sup>Ai có sự trông cậy đó trong lòng, thì <i><strong>tự mình làm nên thanh sạch</strong></i>, cũng như Ngài là thanh sạch.”* </span> (1 John 3:3) 
 
-Bạn có thể đề nghị một phương pháp gì để chúng ta tự mình làm thanh sạch? Ăn chay, dự lễ rửa, tránh uống rượu, hay làm như người Cơ-lô-se, *"chớ lấy, chớ nếm, chớ rờ"*? (Colossians 2:21) Những giáo điều này có phù hợp với những chân lý nền tảng không? Mời bạn thử đọc các đoạn Kinh thánh dưới đây:
+Bạn dùng phương pháp nào để chúng ta làm cho mình thanh sạch? Ăn chay, dự lễ rửa, tránh uống rượu, hay làm như người Cơ-lô-se, *"chớ lấy, chớ nếm, chớ rờ"*? (Colossians 2:21) Những giáo điều này có phù hợp với những chân lý nền tảng không? Mời bạn thử đọc các đoạn Kinh thánh dưới đây:
 
 > <span style="color: rgb(0, 61, 152);">*“Các ngươi đã được trong sạch, vì <u>lời</u> ta đã bảo cho.”* (John 15:3)<br />    *“để khiến Hội nên thánh sau khi lấy nước rửa và dùng <u>Lời Chúa</u> làm cho Hội tinh sạch”* (Ephesians 5:26)<br />    *“Trước kia anh em ít nữa cũng có một đôi người như thế; nhưng nhơn <u>danh Ðức Chúa Jêsus Christ, và nhờ Thánh Linh</u> của Ðức Chúa Trời chúng ta, thì anh em được rửa sạch, được nên thánh, được xưng công bình rồi.”* (1 Cor 6:11)</span>
 
-Theo những đoạn Kinh thánh trên, chúng ta không những được rửa sạch, mà còn được thánh hóa và được xưng công bình, tất cả chỉ nhờ lời Chúa chứ không phải nhờ một điều gì khác. Tôi yêu thích sự đơn giản và ngắn gọn của đoạn John 15:3 trích ở trên: *"Các ngươi được trong sạch, vì lời ta đã bảo cho."*  Tôi mong rằng đây cũng là ý của Giăng, như tôi e rằng Giăng là một trong những sứ đồ vẫn còn vướng vào lưới của luật pháp.
-
-Tránh những điều ác có thể làm hại đến bản thân hay người khác, và làm những điều lành là điều đáng khen ngợi, nhưng nếu bạn nghĩ là nhờ những hành động đó bạn được thanh sạch thì đó là một lầm lẫn lớn. Xác thịt bạn không thể tự nó làm mình thanh sạch. Chỉ lời Chúa mới có quyền năng đó, lời đó mở mang trong trí bạn quyền năng của dòng huyết báu của Chiên Con Đức Chúa Trời.
+Theo những đoạn Kinh thánh trên, chúng ta không những được rửa sạch, mà còn được thánh hóa và được xưng công bình, tất cả chỉ nhờ Chúa và lời của Ngài chứ chẳng phải nhờ một điều gì khác. Tôi yêu thích sự đơn giản và ngắn gọn của đoạn John 15:3 trích ở trên: *"Các ngươi được trong sạch, vì lời ta đã bảo cho."*  Làm lành lánh dữ là điều tốt, nhưng chẳng điều chi có thể làm bạn thanh sạch chỉ ngoại trừ những điều được nhắc đến trong đoạn Kinh thánh trích ra ở trên.
 
 ## HỄ AI Ở TRONG CHÚA THÌ KHÔNG PHẠM TỘI
 
-<span style="color: rgb(159, 29, 33);"> *“<sup>6</sup><strong>Ai ở trong Ngài thì không phạm tội; còn ai phạm tội</strong>, thì chẳng từng thấy Ngài và chẳng từng biết Ngài. <sup>7</sup>Hỡi các con cái bé mọn, chớ để cho ai lừa dối mình: kẻ làm sự công bình là người công bình, như chính mình Chúa là công bình. <sup>8</sup>Kẻ nào phạm tội là thuộc về ma quỉ; vì ma quỉ phạm tội từ lúc ban đầu. Vả, Con Ðức Chúa Trời đã hiện ra để hủy phá công việc của ma quỉ.”* </span> (1 John 3:6-8)  
+<span style="color: rgb(159, 29, 33);"> *“<sup>6</sup><strong>Ai ở trong Ngài thì không phạm tội; còn ai phạm tội</strong>, thì chẳng từng thấy Ngài và chẳng từng biết Ngài. <sup>7</sup>Hỡi các con cái bé mọn, chớ để cho ai lừa dối mình: kẻ làm sự công bình là người công bình, như chính mình Chúa là công bình. <sup>8</sup><strong>Kẻ nào phạm tội là thuộc về ma quỉ</strong>; vì ma quỉ phạm tội từ lúc ban đầu. Vả, Con Ðức Chúa Trời đã hiện ra để hủy phá công việc của ma quỉ.”* </span> (1 John 3:6-8)  
 
-Câu 6 khiến tôi hoang mang vì theo như lời viết trong Rô-ma 3:23, *"mọi người đều phạm tội và thiếu mất sự vinh hiển của Đức Chúa Trời"* thì ai là người *"ở trong Ngài thì không phạm tội"*? Còn ai là người *"làm sự công bình"* và ai mà không *"thuộc về ma quỉ"*?
+Kinh thánh không hỗ trợ quan niệm của Giăng là người tin Chúa không còn phạm tội nữa. Vì mặc dầu chúng ta đã được cứu nhờ tin nơi Đấng Christ, chúng ta vẫn chưa được ban cho bản chất bất tử cho đến khi Chúa Giê-su trở lại khi tiếng kèn chót thổi lên trong 1 Cô-rinh-tô 15. Chúng ta vẫn còn khả năng phạm tội. Điều Giăng tuyên bố không phản ảnh hiện trạng của bất kỳ ai, người đã được cứu cũng như người còn hư mất.
 
-Tại sao Giăng lại phán quyết như vậy, vì thực ra ông biết rằng người tin Chúa vẫn còn phạm tội như ông đã viết trong chương trước như vầy:
+Giăng biết giáo lý này là không đúng vì như ông đã viết trước đây trong 1 John 2:1-1 rằng ***"Nếu có ai phạm tội, thì chúng ta có Đấng cầu thay ở nơi Đức Chúa Cha, là Đức Chúa Giê-su Christ"***.
 
- >  <span style="color: rgb(0, 61, 152);">*“<sup>1</sup>Hỡi con cái bé mọn ta, ta viết cho các con những điều nầy, hầu cho các con khỏi phạm tội. <u>Nếu có ai phạm tội</u>, thì chúng ta có Ðấng cầu thay ở nơi Ðức Chúa Cha, là Ðức Chúa Jêsus Christ, tức là Ðấng công bình, <sup>2</sup>Ấy chính Ngài làm của lễ chuộc tội lỗi chúng ta, không những vì tội lỗi chúng ta thôi đâu, mà cũng vì tội lỗi cả thế gian nữa.”* (1 John 2:1-2)  </span>
-
-Điều đáng mừng, theo sự hiểu biết của tôi về phúc âm, không phải là chúng ta không còn phạm tội nữa, nhưng là chúng ta được tha thứ. Hãy thử tưởng tượng một người đọc câu 6, lỡ lầm phạm tội, rổi vì thế kết luận rằng mình *"chẳng từng thấy Ngài và chẳng từng biết Ngài."*   Do đó, chúng ta không lạ gì phần lớn tín hữu không biết mình được sự sống đời đời.
+Điều đáng mừng, theo sự hiểu biết của tôi về phúc âm, là không phải chúng ta không còn phạm tội nữa, nhưng vì chúng ta được tha thứ. Thử nghĩ đến một người đọc câu 6 và lấy đó làm chân lý, rồi lỡ lầm phạm tội, và vì thế kết luận rằng mình ***"chẳng từng thấy Ngài và chẳng từng biết Ngài"***, hay nghĩ rằng vì thế mình ***"thuộc về ma quỉ"***.   Do đó, chúng ta không lạ gì phần lớn tín hữu không biết mình được sự sống đời đời. Giáo lý mà Giăng cổ động ở đây hầu như mang tính chất tà giáo.
 
 ## KẺ CHẲNG YÊU ANH EM MÌNH KHÔNG THUỘC VỀ CHÚA
 
-<span style="color: rgb(159, 29, 33);">
-*“Bởi đó, người ta nhận biết con cái Ðức Chúa Trời và con cái ma quỉ: ai chẳng làm điều công bình là không thuộc về Ðức Chúa Trời, kẻ chẳng yêu anh em mình cũng vậy.” * </span> (1 John 3:10)  
+<span style="color: rgb(159, 29, 33);"> *“Bởi đó, người ta nhận biết con cái Ðức Chúa Trời và <strong>con cái ma quỉ</strong>: ai chẳng làm điều công bình là không thuộc về Ðức Chúa Trời, <strong>kẻ chẳng yêu anh em mình</strong> cũng vậy.”* </span> (1 John 3:10)  
 
-Mặc dầu tôi đồng ý với Giăng là sự yêu thương anh em trong Chúa có thể là dấu hiệu một người thuộc về Chúa, tôi tin rằng đòi hỏi tình yêu đó như một điều kiện để được sự cứu rỗi là nghịch lại với chân lý. Đây có thể không phải là ý của Giăng, nhưng nếu đó thực là điều ông giảng thì tôi xin bất đồng ý kiến.
+Đây lại là một định nghĩa nữa của Giăng về sự cứu rỗi không được hỗ trợ bởi những chân lý nền tảng. Phúc âm đơn thuần nhất của Chúa Giê-su chỉ tuyên bố rằng người nào nhận sự chết của Đấng Christ vì tội lỗi mình trên thập giá là người đó trở nên con cái Đức Chúa Trời. Còn theo Giăng thì bạn chỉ là con cái Ngài nếu bạn yêu mên các anh em trong Chúa.
 
-Tình yêu là một trái Thánh Linh theo như Galatians 5:22. Nó là kết quả tự nhiên của việc Chúa làm trong đời sống một người đã được tái sinh. Và nếu đó là một trái Thánh Linh, thì không thể nào lại là kết quả của việc làm của xác thịt dưới sự cai quản của luật pháp.
+Chúng ta có thể nghi ngờ về một người nào đó tự xưng mình là tín đồ mà có những hành vi không xứng, nhưng đó chỉ là sự nghi ngờ, nhưng không thể dùng sự nghi ngờ đó thành định nghĩa của tin mừng cứu rỗi. Dù bạn có hoài nghi bản chất tội lỗi của con người đến đâu chăng nữa, bạn vẫn phải truyền bá phúc âm về đức tin nơi thập giá của Chúa Giê-su mà không cần lo lắng rằng họ có yêu thương anh em trong Chúa hay không. Trong ngụ ngôn cỏ lùng, các môn đệ Chúa có sự  nghi ngờ rằng một số người mạo danh Chúa và muốn loại trừ họ, nhưng Chúa Giê-su bảo họ hãy để Chúa làm việc đó:
 
-Một phản đối nữa về giả định của Giăng khi ông viết *"kẻ chẳng yêu anh em mình không thuộc về Đức Chúa Trời."* Điều ông viết không thỏa mệnh lệnh yêu thương của Chúa Giê-su rằng chúng ta cũng phải yêu thương kẻ thù nữa (Matthew 5:43-48). Thực vậy, nếu bạn muốn noi gương Đấng Christ, bạn phải yêu thương cả thế gian (John 3:16). Yêu thương anh em trong Chúa thì dễ hơn là yêu kẻ không phù hợp với thành kiến của mình. Cái nhìn của Giăng thật thiếu sót tiêu chuẩn công bình của Đức Chúa Trời.
-Sự công bình mà Đức Chúa Trời ban cho chúng ta cũng chẳng phải của riêng chúng ta, và cũng sẽ chẳng bao giờ. Vì đó là sự ban cho cách nhưng không. Nó là chiếc áo choàng Chúa ban cho những tội nhân lõa lồ. Theo Romans 3:23, *"Mọi người đều phạm tội và thiếu mất sự vinh hiển của Đức Chúa Trời."*  Thế thì có kẻ thiều công bình nào lại làm được việc công bình? Chẳng một ai, vì theo Isaiah 64:6, mọi việc họ làm đều là *"tấm áo nhớp."*  Công việc Chúa làm qua bạn là nguồn của mọi việc lành bạn làm. Mọi việc bạn làm đều đã được Chúa sắm sẵn sau khi Ngài cứu bạn, chẳng phải trước (Ephesians 2:10). Những việc công bình thật chẳng bao giờ đến bởi các giới răn của luật pháp, vì luật pháp chỉ sanh ra *"bông trái của sự chết"* (Romans 7:5). Một toa xe lửa chẳng bao giờ nên để trước đầu tàu.
-
-Toa xe lửa của Giăng *"yêu thương anh em mình"* đang được đặt trước hoặc sau đầu tàu là đức tin nơi Đấng Christ?
-
-## SỰ CÔNG BÌNH - CỦA TÔI HAY TỪ CHÚA?
-Sự công bình mà Giăng muốn chúng ta *"làm"* ở đây có thể được kể vào loại *"sự công bình của tôi"*, như được Phao-lô diễn tả dưới đây:
-> _“ … <sup>9</sup>và được ở trong Ngài, được <strong>sự công bình, không phải của tôi bởi luật pháp mà đến</strong>, bèn là bởi tin đến Ðấng Christ mà được, tức là <strong>công bình đến bởi Ðức Chúa Trời</strong> và đã lập lên trên đức tin;”  (Philippians 3:9)
-
-Sự công bình đến bởi Đức Chúa Trời không phải là điều mà chúng ta có thể nhờ *"làm"* điều gì đó mà có được, bởi vì nó chỉ được ban cho chúng ta *"bởi tin đến Đấng Christ mà được"*', không phải bởi sức tôi cho dù tôi có ráng ra vẻ thiêng liêng đến đâu chăng nữa. Sự công bình của riêng một người chỉ có thể đến bởi các việc làm bởi sự đòi hỏi của luật pháp mà trước đó một chút Phao-lô đã gọi là *"rác rến"* trong Philippians 3:8.
-
-Thế thì công bình mà Giăng kêu gọi chúng ta *"làm"* là thuộc loại nào?
-
-## KẾT LUẬN
-
-Tại sao Chúa lại để trong Kinh thánh những đoạn dường như mâu thuẫn với những chân lý nền tảng chẳng hạn như sự dạy dỗ của sứ đồ Phao-lô về sự xưng công bình bởi đức tin? Tôi tin rằng Chúa đã cố tình dùng sự dạy dỗ dường như đặt nền tảng trên luật pháp của Giăng làm hòn đá vấp chân cho những người có khuynh hướng cậy vào luật pháp để được sự công bình của Đức Chúa Trời. Những đoạn Kinh thánh này trở thành khí cụ của Chúa để phân biệt cỏ dại và lúa mì, tin lành chân thật và giả dối.
-
-Nhiều nhà bình luận Thánh Kinh đã gắng sức để hòa giải những đoạn Kinh thánh mâu thuẫn hầu đi đến một giải thích có tính cách hòa giải, nhưng không thể nào có sự hòa đồng giữa trắng và đen, đức tin và luật pháp, chân lý và giả dối. Những nỗ lực này không thể dẫn tín hữu đến với chân lý.
-
-Có quá nhiều những ý niệm trong thơ Giăng thứ nhất mâu thuẫn với những chân lý nền tảng về sự xưng công bình bởi đức tin và Giao Ước Mới. Dầu vậy, chúng ta cũng có thể tìm được những ứng dụng trong một bối cảnh thích hợp.
+> <sup>29</sup>Chủ rằng: Chẳng nên, e khi nhổ cỏ lùng, hoặc các ngươi <strong>nhổ lộn lúa mì</strong> đi chăng. <sup>30</sup>Hãy để cho cả hai thứ cùng lớn lên cho đến mùa gặt (Matthew 13:29-30.
 
 {% include bible-study/bible-study-footer %}
 
