--- a/_posts/bible-studies/John-Epistles/2022-09-15-1John-ch2-v28-ch3-v10.md
+++ b/_posts/bible-studies/John-Epistles/2022-09-15-1John-ch2-v28-ch3-v10.md
@@ -1,6 +1,6 @@
 ---
 title: "1 John 2:28-3:10"
-excerpt: "Remain in Him. Purify himself. Everyone who resides in Him does not sin. So it is with the one who does not love his fellow Christians."
+excerpt: "Remain in Him. Purify yourself. Christians don't sin.Christians love fellow Christians."
 image:
   teaser: 1-John-teaser.jpg
 tags: [john-epistles, bible-studies]
@@ -23,15 +23,16 @@ comments_locked: false
 [(<em>Bấm vào đây để đọc tiếng Việt</em>)]({{ site.url }}{% post_url bible-studies-Viet/John-Epistles/2022-09-15-1John-ch2-v28-ch3-v10-Viet %})
 <div>
 <p>
-<img alt src="{{ site.url }}/assets/images/1-John-teaser.jpg" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
-Today's study is not any easier than the last one on 1 John 2:7-27. I had to rely on even more foundation truths as anchor points to analyze what John is saying in today's passage.
+<img alt src="http://vacsf.org/assets/images/1-John-teaser.jpg" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
+    Today's study is no easier than yesterday's on 1 John 2:7-27. To understand what John is saying in today's verses, I had to rely on even more foundational truths as anchor points. What does John mean by <i><strong>remaining in him</strong></i>? Continue doing something? He did mention <i><strong>practicing righteousness</strong></i>, so there must be some action involved. John mentions <i><strong>self-purification</strong></i>, which raises a red flag in my mind. I see you avoid doing things that may have negative consequences, but I don't know of anything you can do to purify yourself other than the blood of Christ. Finally, John asserts that <i><strong>Christians do not sin</strong></i>. This teaching appears nowhere else in the Bible. Let us investigate.
 </p>
 </div>
 
-## REMAIN IN HIM  
+
+## WORKS & RIGHTEOUSNESS  
 
 <span style="color: rgb(159, 29, 33);">
-*“<sup>28</sup>And now, little children, <strong>remain in him</strong>, so that when he appears we may have confidence and not <strong>shrink away from him</strong> in shame when he comes back. <sup>29</sup>If you know that he is righteous, you also know that everyone who <strong>practices righteousness</strong> has been fathered by him.”*
+*“<sup>28</sup>And now, little children, <strong>remain in him</strong>, so that when he appears we may have confidence and not <strong>shrink away from him</strong> in shame when he comes back. <sup>29</sup>If you know that he is righteous, you also know that everyone who <strong>practices righteousness</strong> has been <i><strong>fathered by him</strong></i>.”*
 </span>
 (1 John 2:28-29) 
 
@@ -41,35 +42,34 @@ Since I became a Christian more than 30 years ago, I've assumed that *"remaining
 
 As a result, if I don't do the things necessary to *"remain in Him,"* I can't help but *"shrink away from Him,"* which means I'll hear God say to me, *"depart from me, you worker of iniquity"* (Matthew 7:23).
 
-I no longer believe this. If this is still your belief, I wish you the best, because even your best efforts, which are *"filthy rags"* (Isaiah 64:6), will not keep you in him. In fact, your faith in the work that Jesus already did on the cross is the only thing that keeps you in him. Everything else is *"garbage"*  (Philippians 3:8). I hope John is attempting to teach this, but I have my doubts.
+This means that your salvation is contingent on you doing something good and avoiding something bad. What John is saying here contradicts the fundamental truth I know about salvation, which is solely dependent on my faith in Christ, who died on the cross for my sin.
 
 ***Practice righteousness***
 
-While it is true that a child of God will inevitably reflect his character, as *"every good tree bears good fruit"* (Matthew 7:17), someone doing righteous work may not be proof of their being children of God.
+Philippians 3:9 talks of two kinds of righteousness:
 
+>  … <sup>9</sup>and be found in him, not because I have ***my own righteousness*** derived from the law, but because I have the righteousness that comes by way of Christ’s faithfulness – a ***righteousness from God*** that is in fact based on Christ’s faithfulness (Philippians 3:9)
 
-> <span style="color: rgb(0, 61, 152);"><sup>22</sup>Many will say to me on that day, ‘Lord, Lord, did we not prophesy in your name and in your name drive out demons and in your name perform many miracles?’ <sup>23</sup>Then I will tell them plainly, ‘I never knew you. Away from me, you evildoers!’ (Matthew 7:22-23)</span>
+Because righteousness from God can only be received as a gift from him through the death of his Son, John must be talking about practicing his own righteousness. Well, John can ***practice*** all he wants, but nothing he does will grant him the righteousness necessary for God to ***father*** him.
 
-1 Corinthians 13:2-3 also mentions people who boast great virtues but lack love, implying that they do not have Christ:
+John's righteousness is founded on his works, but God's righteousness is founded on Christ's work on the cross. Take care who you rely on for righteousness.
 
-> <span style="color: rgb(0, 61, 152);"><sup>2</sup>If I have the gift of prophecy and can fathom all mysteries and all knowledge, and if I have absolute faith so as to move mountains, but have not love, I am nothing. <sup>3</sup> If I give all I possess to the poor and exult in the surrender of my body, but have not love, I gain nothing. (1 Cor 13:2-3)</span>
-
-As a result, John's claim that *"everyone who practices righteousness has been fathered by him"* is not a fundamental truth, at least not in accordance with the verses quoted above.
+> You who are trying to be declared righteous by the law have been alienated from Christ; you have fallen away from grace! (Galatians 5:4)
 
 ## PURIFIES HIMSELF  
 
 <span style="color: rgb(159, 29, 33);">
-*“<sup>3</sup>And everyone who has this hope focused on him <strong>purifies himself</strong>, just as Jesus is pure.”*
+*“<sup>3</sup>And everyone who has this hope focused on him <strong>purifies himself, just as Jesus is pure</strong>.”*
 </span>
 (1 John 3:3) 
 
 What method do you recommend for us to purify ourselves? Fasting, ritual washing, abstaining from wine, or, as the Colossians advise, *"do not handle, do not touch, do not taste"*? (Colossians 2:21) Are these ideas in accordance with biblical fundamental truths? Consider the following Bible passages:
 
-> <span style="color: rgb(0, 61, 152);">*“You are clean already because of the word that I have  spoken to you.”* (John 15:3)<br />    *“To sanctify her \[the church\] by cleansing her with the washing of the water by the word.”* (Ephesians 5:26)<br />    *“Some of you once lived this way. But you were washed, you were sanctified, you were justified in the name of the Lord Jesus Christ and by the Spirit of our God.”* (1 Cor 6:11)</span>
+> “You are clean already ***because of the word*** that I have  spoken to you.” (John 15:3)
+> “To sanctify her \[the church\] by cleansing her with the washing of the ***water by the word***.” (Ephesians 5:26)
+> “Some of you once lived this way. But you were washed, you were sanctified, you were justified ***in the name of the Lord Jesus Christ and by the Spirit of our God***.” (1 Cor 6:11)
 
-According to the preceding verses, we were not only washed, but also sanctified and justified, all because of God's Word and not by any other works. I love the simplicity and directness of the above-quoted John 15:3: *"You are already clean because of THE WORD I spoke to you."*  I'm hoping that's what John had in mind, but I suspect John was among the apostles who were caught up in the web of legalism.
-
-It is admirable to avoid activities that are harmful to oneself and others and to engage in positive activities, but if you think they will make you more holy, you are mistaken. Your flesh is incapable of cleansing itself. God's Word cleanses you, magnifying the power of the blood of the Lamb of God in your mind.
+According to the preceding verses, we were not only washed, but also sanctified and justified, all because of God's Word and not by any other works. I like how clear and direct the above-quoted John 15:3 is: *"As a result of THE WORD I said to you, you are already clean."* While doing good and avoiding bad is beneficial, nothing you do can purify you except through the means mentioned in the verses quoted above.
 
 ## EVERYONE WHO RESIDES IN HIM DOES NOT SIN
 
@@ -79,47 +79,23 @@ It is admirable to avoid activities that are harmful to oneself and others and t
 </span>
 (1 John 3:6-8)  
 
-Verse 6 threw me for a loop because if *"all have sinned and fall short of God's glory"* (Romans 3:23) then who *"resides in God and does not sin"*? Who *"practices righteousness"*? Who is not *"of the devil"*?
+The Bible does not support John's claim that Christians do not sin. Even though we are saved by faith in Christ, we will not put on the incorruptible until Christ returns at the sound of the last trumpet, according to 1 Corinthians 15. We're still prone to sinning. What John claims is also not representative of the reality of anyone, saved or unsaved.
 
-Why did John make such a claim, given that he clearly knows Christians still sin, as he stated in the previous chapter:
+John knew this isn't true because he wrote earlier in 1 John 2:1-1 that ***"if anyone does sin, we have an advocate with the Father, Jesus Christ the Righteous One***". 
 
- >  <span style="color: rgb(0, 61, 152);">*“<sup>1</sup>My little children, I am writing these things to you so that you may not sin. But if anyone does sin, we have an advocate with the Father, Jesus Christ the Righteous One, <sup>2</sup>and he himself is the atoning sacrifice for our sins, and not only for our sins but also for the whole world.”* (1 John 2:1-2)  </span>
+The good news, according to my understanding of the gospel, is not that we can't sin, but that we are forgiven. I can see someone reading verse 6 and believing it completely, then falling into some sort of sin and concluding that they have *"neither seen nor known him."* or that they are *"of the devil."* It comes as no surprise that only a small percentage of Christians are certain of their salvation. This doctrine that John is promoting is almost cultic in nature.
 
-The good news, according to my understanding of the gospel, is not that we can't sin, but that we are forgiven. I can see someone reading verse 6 and believing it completely, then falling into some sort of sin and concluding that they have *"neither seen nor known him."* or that they are *"of the devil."* It comes as no surprise that only a small percentage of Christians are certain of their salvation.
-
-## TO PRACTICE RIGHTEOUSNESS IS TO LOVE FELLOW CHRISTIANS  
+## CHRISTIANS LOVES FELLOW CHRISTIANS  
 
 <span style="color: rgb(159, 29, 33);">
 *“By this the children of God and the children of the devil are revealed: Everyone who does not practice righteousness – <strong>the one who does not love his fellow Christian – is not of God</strong>.”*
-</span>
-(1 John 3:10)  
+</span> (1 John 3:10)  
 
-While I agree with John that love for fellow Christians can be a good indicator that someone belongs to God, I believe it is incorrect to make love a requirement for salvation. This may not be John's intention at all; however, if it is, I am prepared to object.
+Here's another of John's definitions of salvation that isn't backed up by any known foundational truths. The basic gospel of Jesus Christ simply states that when you accept Jesus' death on the cross for your sins, you become a child of God. According to John, if you don't love your fellow brothers and sisters in the Lord, you're not a Christian.
 
-Love is a fruit of the Spirit, according to Galatians 5:22. It is the natural result of God's work in the life of someone born from above. And if it's a fruit of the Spirit, it can't be the result of your flesh's effort fueled by the law.
+You can have doubts about whether someone is a Christian based on their behavior, but that is only your doubt; it does not constitute the gospel. Despite your doubt about human nature, you should preach the same gospel that you saved by faith in Jesus' cross and not worry about whether they can love their fellow Christians. The disciples of Jesus in the parable of the tares had the same concern about whether someone is a true Christian and wanted to get rid of them, but Jesus told them to leave it to God:
 
-Another objection to John's thesis is that *"he who does not love his fellow Christian is not of God."* It does not fulfill Jesus' command to love our enemies as well (Matthew 5:43-48). Indeed, if you want to be like Christ, you must love the entire world (John 3:16). It is far easier to love fellow Christians than it is to love those who do not fit your mold or expectations. John's expectation falls far short of God's righteousness standard.
-
-The righteousness that God bestows on us is not ours, and it never will be. It's an undeserved favor. It is a covering provided by God for naked sinners. According to Romans 3:23, *"all have sinned and fall short of the glory of God."*  Can unrighteous people do righteous things? No, because according to Isaiah 64:6, all of their works are *"filthy rags."*  God's work in and through you is the source of all your good works. Everything you do or practice was predestined and prepared by God after you were saved, not before (Ephesians 2:10). True good works can never be produced by the law's commandments, which produce only *"fruit for death"* (Romans 7:5). The caboose should never be placed ahead of the engine.
-
-Is John's caboose of *"love your fellow Christians"* positioned before or after the engine of faith in Christ?
-
-## RIGHTEOUSNESS - MY OWN, OR FROM GOD?
-
-The righteousness that John attempts to practice here could be classified as *"my own righteousness,"* as Paul describes in Philippians:
-> _“ … <sup>9</sup>and be found in him, not because I have <strong>my own righteousness</strong> derived from the law, but because I have the righteousness that comes by way of Christ’s faithfulness – a <strong>righteousness from God</strong> that is in fact based on Christ’s faithfulness.”_ (Philippians 3:9)
-
-God's righteousness is not something you can *"practice"* because it is *"based on Christ's faithfulness,"* not my own, no matter how noble I try to spin it. Righteousness from your own efforts can only be derived from the law, which Paul refers to earlier in Philippians 3:8 as *"garbage."*
-
-What kind of righteousness does John exhort us to *"practice"*?
-
-## CONCLUSION
-
-Why did the Lord allow passages in the Bible to appear to contradict the core truths we learned, such as Paul’s teachings about righteousness through faith? I believe it is God’s intention to catch people who have a predisposition to rely on the law’s works to achieve God’s righteousness. Those passages become God’s tool in identifying between wheat and chaaf, the real gospel and the false gospel.  
-
-Many Bible commentators strive to reconcile the contradictory passages in order to come up with a reasonable interpretation, but there is no common ground between black and white, faith and law, truth and untruth. These attempts will not lead to genuine truth for the believers.  
-
-John's first letter contains far too many ideas that contradict the fundamental truths of righteousness by faith and the New Covenant. Nonetheless, when properly applied in the right context, we may find John's teaching useful.
+> <sup>29</sup>But he said, ‘No, lest while you gather up the tares you <strong>also uproot the wheat</strong> with them. <sup>30</sup>Let both grow together until the harvest (Matthew 13:29-30).
 
 {% include bible-study/bible-study-footer %}
 
