Fixed small typos

--- a/_posts/bible-studies/Colossians/2022-09-08-Colossians-02-v11-15.md
+++ b/_posts/bible-studies/Colossians/2022-09-08-Colossians-02-v11-15.md
@@ -26,7 +26,7 @@ comments_locked: false
 <div>
 <p>
 <img alt src="http://vacsf.org/assets/images/Colossians-teaser.jpg" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
-<span style="color: rgb(159, 29, 33);"><i>"<sup>11</sup>In him you also were circumcised – not, however, with a <strong>circumcision performed by human hands</strong>, but by the <strong>removal of the fleshly body</strong>, that is, through the <strong>circumcision done by Christ</strong>."</i></span> (Colossians 2:5—NET)<br />
+<span style="color: rgb(159, 29, 33);"><i>"<sup>11</sup>In him you also were circumcised – not, however, with a <strong>circumcision performed by human hands</strong>, but by the <strong>removal of the fleshly body</strong>, that is, through the <strong>circumcision done by Christ</strong>."</i></span> (Colossians 2:11—NET)<br />
 There are numerous interpretations of circumcision in the Old Testament. However, given our theological conviction that almost all significant symbols or events in the Old Testament are shadows of the real things in the New Testament, we would be wise to interpret the meaning of Old Covenant circumcision in the context of the New Covenant.
 </p>
 </div>
@@ -36,7 +36,7 @@ In the above-quoted verse 5, two types of circumcisions are compared, but we lea
 
 Many religions recognize the problem with the ***"fleshly body"*** and devise numerous methods to eliminate it in order to ascend to a higher level of being. It is also referred to as the ***"body of death"*** in Romans 7:
 
-> <sup>4</sup>Wretched man that I am! Who will rescue me from this body of death? <sup>25</sup>Thanks be to God through Jesus Christ our Lord! (Romans 7:24-25)
+> <sup>24</sup>Wretched man that I am! Who will rescue me from this body of death? <sup>25</sup>Thanks be to God through Jesus Christ our Lord! (Romans 7:24-25)
 
 This ***"fleshly body"*** will be buried with Christ as we continue to the next verse.
 
@@ -60,7 +60,7 @@ We will not only be ***"buried"*** with Christ, but we will also be ***"raised"*
 
 The question of whether or not you are worthy of heaven should be put to rest once and for all, because you are never and will never be, but Christ is, and he has given his worthiness to you as you believe in him.
 
-You enjoy these generous gifts because it is ***"through  your faith."***  None of your efforts contribute to receiving these gifts. People frequently praised someone's heart for being genuine, as if the quality of their hearts earned them some merit toward salvation. However, there is a significant difference between your faith and your heart. Your hope is in Christ with your faith, even if it is as small as a mustard seed, but when you cite your heart as the reason God saves you, you ask God to give you some credit. It is your faith in Christ, not the worthiness of your own heart, which is *"extremely wicked"* (Jeremiah 17:9-10).
+You enjoy these generous gifts because it is ***"through  your faith."***  None of your efforts contribute to receiving these gifts. People frequently praised someone's heart for being genuine, as if the quality of their hearts earned them some merit toward salvation. However, there is a significant difference between your faith and your heart. Your hope is in Christ with your faith, even if it is as small as a mustard seed, but when you cite your heart as the reason God saves you, you ask God to give you some credit. It is your faith in Christ that saves you, not the worthiness of your own heart, which is *"extremely wicked"* (Jeremiah 17:9-10).
 
 ## ALL SINS FORGIVEN
 
