--- a/_posts/bible-studies-Viet/2022-09-15-Tho-Giang.md
+++ b/_posts/bible-studies-Viet/2022-09-15-Tho-Giang.md
@@ -50,3 +50,7 @@ Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Hãy
 
 Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Chớ làm như Ca-in. Kẻ giết người không có sự sống đời đời. Sự phán xét của lương tâm.
 
+##  [<u>1 Giăng:3:22-24</u>]({{ site.url }}{% post_url bible-studies-Viet/John-Epistles/2022-09-15-1John-ch3-v22-24-Viet %})
+
+Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Xin điều gì mặc dầu. Tin lành khác?
+
