--- a/_posts/bible-studies-Viet/2022-09-07-Co-lo-se.md
+++ b/_posts/bible-studies-Viet/2022-09-07-Co-lo-se.md
@@ -58,5 +58,11 @@ Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Chú
 
 Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Phép cắt bì của Đấng Christ. Được chôn và sống lại bởi đức tin. Tha thứ hết mọi tội. Phá hủy tờ khế. Chiến thắng bởi thập tự giá.
 
+##  [<u>Cơ-lô-se 2:16-23</u>]({{ site.url }}{% post_url bible-studies-Viet/Colossians/2022-09-08-Colossians-02-v16-23-Viet %})
+
+Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Bóng và hình. Giả đò khiêm nhượng và kiêu ngạo vô ích. Sự sơ học của thế gian.
+
+Vì phần còn lại của Cơ-lô-se, hai chương 3 và 4, chỉ chứa đựng những lời khuyên nhủ hơn là những lẽ đạo nền tảng, tôi xin để các bạn trong lớp cũng như độc giả tùy nghi đọc phần còn lại để bổ ích tâm linh cho chính mình.
+
 Loạt bài này sẽ có thêm những bài tóm tắt sau mỗi lớp Trường Chúa Nhật. Nếu các bạn thấy những bài học này bổ ích cho đời sống bước đi theo Chúa, xin mời các bạn đến học mỗi sáng Chúa Nhật trên Zoom.
 
