Added new Romans series.

--- a/_posts/bible-studies/Colossians/2022-09-08-Colossians-02-v16-23.md
+++ b/_posts/bible-studies/Colossians/2022-09-08-Colossians-02-v16-23.md
@@ -61,7 +61,7 @@ The common characteristic of religious hypocrites is their ***"false humility"**
 
 We had a lively debate about ***"angel worship"***. There are various interpretations of the term "angels." Some believe it refers to a literal angel, but I believe it refers to someone with the charisma to influence listeners. I haven't seen or heard of any church leaders these days who worship angels, but I have seen many worship famous speakers with large followings.
 
-Whether the term *"angels"* refers to a literal angel or a human messenger with cultic personality, this leader has the authority to ***"pass judgement on you."*** He/she boasts ***"at great length"*** about his/her special relationship with the angel through whom they have ***"supposed seen"*** something that only a select few can see. Many of our church members should be able to see that this leader is only ***"puffed up with empty notions."*** Ironically, the pews in front of these leaders' podiums are almost always packed with people eager to hear their empty notions.
+Whether the term *"angels"* refers to a literal angel or a human messenger with cultic personality, this leader has the authority to ***"pass judgement on you."*** He/she boasts ***"at great length"*** about his/her special relationship with the angel through whom they have ***"supposedly seen"*** something that only a select few can see. Many of our church members should be able to see that this leader is only ***"puffed up with empty notions."*** Ironically, the pews in front of these leaders' podiums are almost always packed with people eager to hear their empty notions.
 
 ## ELEMENTAL SPIRITS
 
