--- a/_posts/bible-studies-Viet/Romans/2022-11-13-Romans-01-v01-16-Viet.md
+++ b/_posts/bible-studies-Viet/Romans/2022-11-13-Romans-01-v01-16-Viet.md
@@ -43,7 +43,7 @@ Cũng có thể Phao-lô đã có cùng cảm nghĩ với Gióp khi Chúa mở m
 <sup>3</sup><strong>về Con Ngài</strong>, theo xác thịt thì bởi dòng dõi vua Ða-vít sanh ra, 
 <sup>4</sup>theo thần linh của thánh đức, thì bởi sự sống lại của Ngài từ trong kẻ chết, được tỏ ra là Con Ðức Chúa Trời có quyền phép, tức là Ðức Chúa Jêsus Christ, Chúa chúng ta.</i></span> (Romans 1:2-4)
 
-Phúc âm mà Phao-lô đã được Chúa gọi để rao giảng thì đều hướng về Đức Chúa Giê-su Christ. Nhưng nếu chúng ta dõi mắt về những thời đại đã qua, có bao nhiêu sách vở và các sự giảng luận nói về Đấng Christ và Ngài chịu đóng đinh, nói rằng chỉ bởi Ngài mà chúng ta được cứu nhờ ân điển và đức tin, nói rằng Ngài đã thay thế hoàn toàn hệ thống dâng của tế lễ chuộc tội, cả hệ thống luật pháp và các điều răn nữa, vì tất cả đều vô ích trong sự đem lại sự công bình mà chỉ Đấng Christ mới có thể đem lại được?
+Phúc âm mà Phao-lô đã được Chúa gọi để rao giảng thì đều hướng về Đức Chúa Giê-su Christ. Nhưng nếu chúng ta dõi mắt về những thời đại đã qua, có bao nhiêu sách vở và các sự giảng luận nói về Đấng Christ và Ngài chịu đóng đinh, nói rằng chỉ bởi Ngài mà chúng ta được cứu nhờ ân điển và đức tin, nói rằng Ngài đã thay thế hoàn toàn hệ thống dâng của tế lễ chuộc tội, cả hệ thống luật pháp và các điều răn nữa, kể cả Mười Điều Răn vĩ đại nữa, vì tất cả đều vô ích trong sự đem lại sự công bình mà chỉ Đấng Christ mới có thể đem lại được?
 
 Thực vậy, phúc âm chỉ là về Đấng Christ và Ngài chịu đóng đinh chứ chẳng phải về những điều mà vô số sách vở và các bài giảng luận thường nói đến (1 Cor 2:2).
 
