--- a/_posts/bible-studies-Viet/Romans/2022-11-13-Romans-01-v01-16-Viet.md
+++ b/_posts/bible-studies-Viet/Romans/2022-11-13-Romans-01-v01-16-Viet.md
@@ -66,6 +66,6 @@ Cảm giác về nợ nần của Phao-lô chắc phải đến từ sự tuôn 
 <span style="color: rgb(159, 29, 33);">
 <i>"<sup>16</sup>Thật vậy, tôi không <strong>hổ thẹn về Tin Lành</strong> đâu, vì là quyền phép của Ðức Chúa Trời để cứu mọi kẻ tin, trước là người Giu-đa, sau là người Gờ-réc; </i></span> (Romans 1:16)
 
-Lý do Phao-lô không hổ thẹn về tin lành cũng đồng với sự ông thấy mình phải rao giảng tin lành cho người hư mất. Vì chẳng một khi thấy giá trị thực và sự khôn ngoan của phúc âm lại hổ thẹn về nó.
+Lý do Phao-lô không hổ thẹn về tin lành cũng đồng với sự ông thấy mình phải rao giảng tin lành cho người hư mất. Vì chẳng một ai khi thấy giá trị thực và sự khôn ngoan của phúc âm lại hổ thẹn về nó.
 
 {% include bible-study/bible-study-footer %}
