--- a/_posts/bible-studies/Romans/2022-11-13-Romans-01-v01-16.md
+++ b/_posts/bible-studies/Romans/2022-11-13-Romans-01-v01-16.md
@@ -59,7 +59,7 @@ The obedience of faith that Paul is tasked with bringing about in Gentiles and J
 <span style="color: rgb(159, 29, 33);">
 <i>"<sup>14</sup><strong>I am a debtor</strong> both to the Greeks and to the barbarians, both to the wise and to the foolish. <sup>15</sup>Thus <strong>I am eager</strong> also to preach the gospel to you who are in Rome.  </i></span> (Romans 1:14-15—NET)
 
-Paul's sense of debt to all men must be an outpouring of his gratitude to the Lord for being so gracious as to save an evil person like him. His eagerness to preach the gospel must have reflected how valuable it was to him. Pew-sitters are frequently exhorted to go out and preach the gospel in order to fulfill the great commission. Paul's eagerness stemmed not from such exhortation, but from his own personal encounter with the treasure of the gospel, which he couldn't keep inside. Instead of telling their flock to pour out of their emptiness, I would advise pastors to help them truly understand the gospel and the treasure that is theirs in Christ. As a result, they will be compelled to respond in the manner of Paul.
+Paul's sense of debt to all men must be an outpouring of his gratitude to the Lord for being so gracious as to save an evil person like him. His eagerness to preach the gospel must have reflected how valuable it was to him. Pew-sitters are frequently exhorted to go out and preach the gospel in order to fulfill the great commission. To fulfill the great commission, pew-sitters are frequently exhorted to go out and preach the gospel. However, Paul's eagerness stemmed from his own personal encounter with the treasure of the gospel, which he couldn't keep inside. Instead of telling their flock to pour out of their emptiness, I would advise pastors to help them truly understand the gospel and the treasure that is theirs in Christ. As a result, they will be compelled to respond in the manner of Paul.
 
 ## NOT ASHAMED OF THE GOSPEL
 
