--- a/_posts/bible-studies-Viet/2022-09-15-Tho-Giang.md
+++ b/_posts/bible-studies-Viet/2022-09-15-Tho-Giang.md
@@ -58,3 +58,7 @@ Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Xin 
 
 Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Chớ tin cậy mọi thần. Ai chẳng yêu, thì không biết Ðức Chúa Trời.
 
+##  [<u>1 Giăng 4:12-21</u>]({{ site.url }}{% post_url bible-studies-Viet/John-Epistles/2022-09-15-1John-ch4-v12-21-Viet %})
+
+Những ý niệm chính thu thập được từ đoạn Kinh thánh này: Nếu chúng ta yêu nhau. Bởi điều này. Xưng Giê-su là Con Trời. Mạnh bạo trong ngày đoán xét.
+
