--- a/_posts/bible-studies-Viet/John-Epistles/2022-09-15-1John-ch4-v12-21-Viet.md
+++ b/_posts/bible-studies-Viet/John-Epistles/2022-09-15-1John-ch4-v12-21-Viet.md
@@ -68,9 +68,9 @@ Người công bình sẽ sống bởi đức tin.
 >
 > <sup>8</sup>“Ta nói cùng các ngươi, ai sẽ xưng ta trước một thiên hạ, thì Con người cũng sẽ xưng họ trước mặt thiên sứ của Ðức Chúa Trời. <sup>9</sup>Nhưng ai chối ta trước mặt thiên hạ, thì họ sẽ bị chối trước mặt thiên sứ của Ðức Chúa Trời. (Luke 12:8)
 
-Tôi hầu như có thể quả quyết rằng khi phán những lời này, Chúa Giê-su đã nhắm vào các lãnh đạo tôn giáo, hay những người tự hào về khả năng giữ luật pháp của thời Cựu Ước. Những người này có thể phải chịu nhiều mất mát trong cộng đồng tôn giáo của họ. Ni-cô-đem là một thí dụ điển hình. Là một lãnh đạo tinh thần, ông có thể bị lộ diện dù đến gặp Chúa trong đêm tối để hỏi Ngài về sự cứu rỗi.
+Tôi hầu như có thể quả quyết rằng khi phán những lời này, Chúa Giê-su đã nhắm vào các lãnh đạo tôn giáo, hay những người tự hào về khả năng giữ luật pháp của thời Cựu Ước. Những người này có thể phải chịu nhiều mất mát trong cộng đồng tôn giáo của họ. Ni-cô-đem là một thí dụ điển hình. Là một lãnh đạo tinh thần, ông có thể bị lộ diện dù đến gặp Chúa trong đêm tối để hỏi Ngài về sự cứu rỗi. Vì biết rõ yếu điểm của mỗi người, Chúa Giê-su luôn luôn có thể đem họ đến sự thử thách để họ thấy rõ tình trạng hư mất của mình. Vì thế, tôi không tin đây là điều kiện của sự cứu rỗi có thể áp dụng cho toàn thể nhân loại bởi vì chính ma quỷ hoặc người bị quỷ ám cũng nhìn nhận Chúa Giê-su là Con Trời (James 2:19; Acts 16:16-18).
 
-Chúng ta đã bàn thảo về đề tài này khi học các [câu 1 và 2](https://vacsf.org/john-epistles/1John-ch4-v1-11-Viet/) trong cùng chương này.
+Chúng ta đã bàn thảo về đề tài này khi học các [câu 1 và 2](https://vacsf.org/john-epistles-viet/1John-ch4-v1-11-Viet/) trong cùng chương này.
 
 ## MẠNH BẠO TRONG NGÀY ĐOÁN XÉT
 
