--- a/_posts/bible-studies/John-Epistles/2022-09-15-1John-ch4-v12-21.md
+++ b/_posts/bible-studies/John-Epistles/2022-09-15-1John-ch4-v12-21.md
@@ -68,7 +68,7 @@ This verse could refer to what Jesus said in Matthew and Luke gospels.
 >
 > <sup>8</sup>“I tell you, whoever acknowledges me before men, the Son of Man will also acknowledge before God’s angels. <sup>9</sup>But the one who denies me before men will be denied before God’s angels. (Luke 12:8-9&mdash;NET)
 
-I'm almost certain that Jesus was aiming these words at the religious leaders, or those who took pride in their ability to keep the Old Covenant's laws and statutes. These folks have a lot to lose in their standing in their religious circle. Nicodemus is one such example. Being a religious leader, he risks exposure by coming to see Jesus at night to ask him about salvation. Knowing the weakness of each person in his audience, Jesus always comes up with a challenge that puts There for I don't think this is a condition for salvation for all of mankind.
+I'm almost certain Jesus was addressing religious leaders or those who took pride in their ability to uphold the laws and statutes of the Old Covenant. These people have a lot to lose in terms of their religious standing. One such example is Nicodemus. As a religious leader, he risks exposing himself by visiting Jesus at night to inquire about salvation. Knowing each person's weakness, Jesus always comes up with a challenge that exposes people's true sinful nature. As a result, I don't believe this is a requirement for salvation for all of humanity, because even demons or demon-possessed people recognize Jesus as the Son of God.
 
 We already discussed this topic at some length when we studied [verses 1 and 2](https://vacsf.org/john-epistles/1John-ch4-v1-11/) in the same chapter.
 
