--- a/_posts/bible-studies/John-Epistles/2022-09-15-1John-ch3-v22-24.md
+++ b/_posts/bible-studies/John-Epistles/2022-09-15-1John-ch3-v22-24.md
@@ -43,9 +43,7 @@ The goal of a Christian is to walk in accordance with the Holy Spirit's leading,
 ## ANOTHER GOSPEL?
 
 <span style="color: rgb(159, 29, 33);">
-<i>“<sup>14</sup>And <strong>this is his command</strong>: to <strong>believe in the name of his
-Son, Jesus Christ</strong>, <strong><u>and</u></strong> to <strong>love one another</strong> as he
-commanded us.</i> </span> (1 John 3:24) 
+<i>“<sup>23</sup>And <strong>this is his command</strong>: to <strong>believe in the name of his Son, Jesus Christ</strong>, <strong><u>and</u></strong> to <strong>love one another</strong> as he commanded us.</i> </span> (1 John 3:23) 
 
 There is only one law under the New Covenant, which is known as the ***"law of the Spirit of Life."*** (Romans 8:2)  Its counterpart is the Old Covenant law, also known as the ***"law of sin and death."***  As stated previously, New Covenant believers have been freed from the law of sin and death.
 
