--- a/_posts/bible-studies-Viet/John-Epistles/2022-09-15-1John-ch5-v1-3-Viet.md
+++ b/_posts/bible-studies-Viet/John-Epistles/2022-09-15-1John-ch5-v1-3-Viet.md
@@ -52,9 +52,7 @@ comments_locked: false
 
 Nói một cách ngắn gọn:
 
-- Nếu bạn không sống trong sự yêu thương: bạn không thuộc về Chúa, bạn thuộc về ma quỉ, bạn không biết Chúa.
-
-- Nếu bạn sống trong sự yêu thương: bạn ở trong sự sáng, bạn vượt khỏi sự chết qua sự sống, bạn được sanh từ Đức Chúa Trời, Đức Chúa Trời ở trong bạn.
+&bull;&nbsp;Nếu bạn không sống trong sự yêu thương: bạn không thuộc về Chúa, bạn thuộc về ma quỉ, bạn không biết Chúa.<br />&bull;&nbsp;Nếu bạn sống trong sự yêu thương: bạn ở trong sự sáng, bạn vượt khỏi sự chết qua sự sống, bạn được sanh từ Đức Chúa Trời, Đức Chúa Trời ở trong bạn.
 
 Đến đây bạn phải đi đến kết luận rằng Giăng không phải chỉ đơn thuần khuyên nhủ chúng ta hãy yêu thương lẫn nhau, nhưng ông đang bày tỏ một phúc âm cứu rỗi đặt nền tảng trên khả năng yêu thương người khác. Đó là một phúc âm của việc làm.
 
