--- a/_posts/bible-studies/John-Epistles/2022-09-15-1John-ch5-v1-3.md
+++ b/_posts/bible-studies/John-Epistles/2022-09-15-1John-ch5-v1-3.md
@@ -54,9 +54,7 @@ We should have realized by now that God's commandment, according to John, is tha
 
 In summary:
 
-- If you don't love fellow Christians: you're not of God, you're of the evil one, you don't know God.
-
-- If you do love fellow Christians: you reside in the light, you crossed over from death to life, you have been fathered by God, God resides in you.
+&bull;&nbsp;If you don't love fellow Christians: you're not of God, you're of the evil one, you don't know God.<br />&bull;&nbsp;If you do love fellow Christians: you reside in the light, you crossed over from death to life, you have been fathered by God, God resides in you.
 
 You must conclude that John is not simply encouraging us to love other Christians, but rather expressing a gospel of salvation based on our ability to love other Christians. It's a gospel of works.
 
