--- a/_posts/bible-studies-Viet/John-Epistles/2022-09-15-1John-ch2-v7-27-Viet.md
+++ b/_posts/bible-studies-Viet/John-Epistles/2022-09-15-1John-ch2-v7-27-Viet.md
@@ -23,7 +23,7 @@ comments_locked: false
 <div>
 <p>
 <img alt src="http://vacsf.org/assets/images/1-Giang-teaser.jpg" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
-Kinh thánh chứa đựng nhiều dữ kiện khác nhau. Một phần thì gồm những dữ kiện có tính cách lịch sử cho chúng ta thấy bối cảnh, một phần gồm những lời khuyên dạy làm lành và lánh dữ, và phần cuối, đối với tôi là có giá trị nhất, chứa đựng những điều mà tôi gọi là chân lý nền tảng bày tỏ sự cứu rỗi và phúc âm của Chúa Giê-su. Nhiều người cho rằng thư của Giăng là thuộc vào phần thứ nhì. Tôi không đồng ý. Tôi nghĩ rằng phần lớn điều ông viết dầu có vẻ là những điều khuyên nhủ nhưng thực ra là những định nghĩa về sự cứu rỗi không phù hợp với phúc âm.
+Kinh thánh chứa đựng nhiều dữ kiện khác nhau. Một phần thì gồm những dữ kiện có tính cách lịch sử cho chúng ta thấy bối cảnh, một phần gồm những lời khuyên dạy làm lành và lánh dữ, và phần cuối, đối với tôi là có giá trị nhất, chứa đựng những điều mà tôi gọi là chân lý nền tảng bày tỏ sự cứu rỗi và phúc âm của Chúa Giê-su. Nhiều người cho rằng thư của Giăng là thuộc vào phần thứ nhì là những lời khuyên nhủ. Tôi không đồng ý. Tôi nghĩ rằng phần lớn điều ông viết dầu có vẻ là những điều khuyên nhủ nhưng thực ra là những định nghĩa về sự cứu rỗi không phù hợp với phúc âm.
 </p>
 </div>
 
