--- a/_posts/bible-studies/John-Epistles/2022-09-15-1John-ch2-v7-27.md
+++ b/_posts/bible-studies/John-Epistles/2022-09-15-1John-ch2-v7-27.md
@@ -25,7 +25,7 @@ comments_locked: false
 <div>
 <p>
 <img alt src="http://vacsf.org/assets/images/1-John-teaser.jpg" style="border: 0px none; margin: 7px 15px 0px 0px; max-width: 100%; height: 148px; padding: 0px; float: left;">
-The Bible contains a wide range of information. A portion of it contains historical information to provide context, another portion contains teachings intended to encourage good behavior and warn against bad behavior, and the final portion, in my opinion, contains the most valuable information, which I refer to as foundational truths that form the foundation of the gospel of Jesus Christ and define salvation. Most people believe that what John wrote falls into the second category. I respectfully disagree. I believe that most, if not all, of what he wrote appears to be moral teachings but is actually definitions of salvation that contradict the gospel.
+The Bible contains a wide range of information. A portion of it contains historical information to provide context, another portion contains teachings intended to encourage good behavior and warn against bad behavior, and the final portion, in my opinion, contains the most valuable information, which I refer to as foundational truths that form the foundation of the gospel of Jesus Christ and define salvation. Most people believe that what John wrote falls into the second category of exhortations. I respectfully disagree. I believe that most, if not all, of what he wrote appears to be moral teachings but is actually definitions of salvation that contradict the gospel.
 </p>
 </div>
 
