--- a/_posts/bible-studies-Viet/2015-01-17-Ro-ma.md
+++ b/_posts/bible-studies-Viet/2015-01-17-Ro-ma.md
@@ -28,6 +28,10 @@ Lớp Trường Chúa Nhật chúng tôi bắt đầu vào sách Rô-ma. Do đó
 
 Những ý niệm chính thu thập được từ đoạn Kinh thánh này: 1) Đức Tin, Hy Vọng, và Tình Yêu Thương, 2) Thực Sự Hiểu Biết Ơn Chúa, 3) Biết Ý Chúa, 4) Định Nghĩa Sứ Đồ Của Chúa Giê-su (phim dài 10 phút để giúp các học viên bén nhậy khi nhận diện những tiên tri và giáo điều giả dối).
 
+##  [<u>Rô-ma 1:17-32</u>]({{ site.url }}{% post_url bible-studies-Viet/Romans/2022-11-13-Romans-01-v17-32-Viet %})
+
+Những ý niệm chính thu thập được từ đoạn Kinh thánh này: 1) Đức Tin, Hy Vọng, và Tình Yêu Thương, 2) Thực Sự Hiểu Biết Ơn Chúa, 3) Biết Ý Chúa, 4) Định Nghĩa Sứ Đồ Của Chúa Giê-su (phim dài 10 phút để giúp các học viên bén nhậy khi nhận diện những tiên tri và giáo điều giả dối).
+
 
 ## Lần viết đầu tiên - 2015
 
