--- a/_posts/bible-studies/Romans/2022-11-13-Romans-01-v01-16.md
+++ b/_posts/bible-studies/Romans/2022-11-13-Romans-01-v01-16.md
@@ -2,13 +2,13 @@
 title: "Romans 1:1-16"
 excerpt: "Paul was called to be an apostle. The promised gospel. The obedience of faith. Paul's debt. Not ashamed of the gospel."
 image:
-  teaser: Colossians-teaser.jpg
-tags: [colossians, bible-studies]
+  teaser: Romans-teaser.jpg
+tags: [romans, bible-studies]
 featured: false
 modified:
 comments: true
 feature:
-  category: colossians
+  category: romans
 comments_locked: false
 ---
 
