--- a/_posts/bible-studies/2015-01-17-Romans.md
+++ b/_posts/bible-studies/2015-01-17-Romans.md
@@ -31,6 +31,10 @@ Our Sunday School class has just started studying Romans, so in the coming weeks
 
 The key concepts gathered from the study of this passage: Paul was called to be an apostle. The promised gospel. The obedience of faith. Paul's debt. Not ashamed of the gospel.
 
+##  [<u>Romans 1:17-32</u>]({{ site.url }}{% post_url bible-studies/Romans/2022-11-13-Romans-01-v17-32 %})
+
+The key concepts gathered from the study of this passage: Living by faith. Condemnation of the unrighteous.
+
 ## First writing of Romans study (2015)
 
 What Paul wrote in this book of Romans is frequently misunderstood, or regarded with suspicion, that it gives folks a license to sin. This is not what Romans 3:20 said. For all practical intents and purposes, it says you will not get any closer to God by doing good, or be driven further from God by doing bad, because the law is only meant to show how sinful you are. It's an x-ray into your heart to show its utter depravity. It does not heal you, or give you life.
